<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/precoEtanol"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:hint="@string/precoEtanol"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/precoGasolina"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/precoGasolina"
        android:inputType="number|numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precoEtanol" />

    <Button
        android:id="@+id/calcular"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:onClick="calcularEficienciaCombusivel"
        android:text="@string/calcular"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precoGasolina" />

    <TextView
        android:id="@+id/desenvolvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/desenvolvido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="230dp"
        android:layout_height="52dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="cursive"
        android:text="@string/title"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/precoEtanol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/abasteca"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="245dp"
        android:text="@string/abesteca"
        app:layout_constraintBottom_toTopOf="@+id/desenvolvido"
        app:layout_constraintStart_toStartOf="@+id/calcular"
        app:layout_constraintTop_toBottomOf="@+id/calcular" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="68dp"
        android:text="@string/dev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/desenvolvido" />

    <TextView
        android:id="@+id/combustivelIndicado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Combustivel"
        app:layout_constraintBottom_toBottomOf="@+id/abasteca"
        app:layout_constraintStart_toEndOf="@+id/abasteca"
        app:layout_constraintTop_toTopOf="@+id/abasteca" />

</androidx.constraintlayout.widget.ConstraintLayout>